--- a/resources/index.html
+++ b/resources/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <title>hiccup-d3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
