Fix lighthouse issues

--- a/resources/index.html
+++ b/resources/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html class="bg-gray-100">
+<html class="bg-gray-100" lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="Description"
+      content="Transforming D3 code to ClojureScript is complex. Use these starting points to create a new chart with hiccup. No functionality was wrapped, access the full D3 API."
+    />
     <title>hiccup-d3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/styles.css" rel="stylesheet" />
