Add syntax highlighting

--- a/resources/index.html
+++ b/resources/index.html
@@ -9,6 +9,7 @@
     <title>hiccup-d3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/glow.css" rel="stylesheet" />
   </head>
   <body>
     <a
